# sketch_ui

./: .gitignore  README.md
sketch_maker/: CMakeLists.txt  Doxyfile  README.md  TopologicalMap.uxf  UML_MapMaker.uxf  Whole_system.uxf  main.cpp  main_windows.cpp  uml.xmi
sketch_maker/includes/: CMakeLists.txt
sketch_maker/includes/MapInterpretation/: CMakeLists.txt  Robot.hpp  SketchComparator.hpp  SketchComparatorWindows.hpp  SketchMap.cpp  SketchMap.hpp  WindowsSocket.hpp
sketch_ui/: CMakeLists.txt  Doxyfile  README.md  main.cpp  specs.md  ui_expert.cpp  ui_windows.cpp
sketch_ui/includes/Qtfiles/: CMakeLists.txt  MapMakerExpert.cpp  MapMakerExpert.h  MapMakerExpertWindows.cpp  MapMakerExpertWindows.h  MapMakerv3.cpp  MapMakerv3.h  imageLabel.cpp  imageLabel.h  matconversions.hpp
